Update src/test/java/bio/terra/service/resourcemanagement/google/BucketResourceTest.java
Co-authored-by: Phil Shapiro <pshapiro@broadinstitute.org>